viz: Recreate the surface layer without surface-sync.

crrev.com/562737 made a change to update the surface-layer with the
appropriate primary/fallback surfaces (and bounds) during surface
activation. This was to improve performance with surface-sync. However,
this ended up triggering a regression in the input pipeline (see linked
bugs). So, update the code so that when surface-sync is not used, the
surface-layer is destroyed during eviction, and recreated as needed.

BUG=867581

Change-Id: I0c07f5782c06de171bec131014b66eab9a09b879
Reviewed-on: https://chromium-review.googlesource.com/1187277
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586143}
Former-commit-id: 5d1f8253fad3b518ca58c5fbf535dd0cc186826e